--- a/style.css
+++ b/style.css
@@ -18,10 +18,11 @@ h1 {
 }
 
 .header {
-    font-size: 20px;
+    font-size: 30px;
     margin-left: 175px;
     margin-top: 50px;
     margin-bottom: 50px;
+    color: green;
 }
 
 .sidebar {
