--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h1 {
 }
 
 .bodyheading {
-    font-size: 40px;
+    font-size: 30px;
     margin-bottom: 20px;
 }
 
@@ -48,4 +48,31 @@ h1 {
     display: flex;
     gap: 12px;
     margin-top: 12px;
+}
+
+.filmposter {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 12px;
+    margin-right: 12px;
+    justify-content: center;
+    align-items: center;
+}
+
+.film {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    margin-top: 12px;
+    justify-content: baseline;
+}
+
+.filmdescription {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-top: 12px;
+    justify-content: center;
+    align-items: baseline;
 }
