--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ h1 {
     text-decoration: none;
 }
 
+.footer {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    font-size: 12px;
+    color: green;
+}
+
 .sidebar {
     flex-shrink: 0;
 }
