--- a/music/theomusic/music_files/style.css
+++ b/music/theomusic/music_files/style.css
@@ -87,22 +87,16 @@ h1 {
 
 .albums {
     display: flex;
-    flex-direction: row;
-    /* gap: 12px; */
-    /* margin-top: 12px; */
-    justify-content: baseline;
+    flex-direction: row
+    gap: 12px;
+    margin-top: 12px;
+    justify-content: centre;
 }
 
 .album {
     display: flex;
     flex-direction: column;
-    /* gap: 12px; */
-    /* margin-top: 12px; */
-    justify-content: baseline;
-}
-
-.albumtitle{
-    display: flex;
+    gap: 12px;
+    margin-top: 12px;
     justify-content: center;
-    font-size: 20px;
 }
